--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     },
     "dependencies": {
         "@project-serum/anchor": "^0.25.0",
-        "@todesstille/mocksolana": "=0.0.2"
+        "@todesstille/mocksolana": "=0.0.15"
     },
     "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^10.0.0",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
-        "typescript": "^4.3.5",
-        "prettier": "^2.6.2"
+        "chai": "^4.3.7",
+        "mocha": "^9.0.3",
+        "prettier": "^2.6.2",
+        "ts-mocha": "^10.0.0",
+        "typescript": "^4.3.5"
     }
 }
